--- a/system/scripts/ScriptsZone.csproj
+++ b/system/scripts/ScriptsZone.csproj
@@ -96,6 +96,7 @@
     <Compile Include="core\client\free_drops\main.cs" />
     <Compile Include="core\client\personal_shops\main.cs" />
     <Compile Include="core\client\stat_by_level\main.cs" />
+    <Compile Include="core\dialog_tx.cs" />
     <Compile Include="custom\client\unclutter\main.cs" />
     <Compile Include="core\client\custom_npc_shops\main.cs" />
     <Compile Include="const\ItemId.cs" />
